<resources>
    <string name="app_name">Pink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pink_list_layoutManager_linear">LinearLayoutManager</string>

    <!-- Common -->

    <string name="pink_cancel">取消</string>
    <string name="pink_Confirm">确定</string>

    <!-- Activity/Fragment Titles -->
    <string name="pink_fragment_title_home">首页</string>
    <string name="pink_fragment_title_music">音乐</string>
    <string name="pink_fragment_title_video">视频</string>
    <string name="pink_fragment_title_news">新闻</string>

    <string name="pink_activity_title_file_system">SDCard</string>

    <!-- Play Lists -->
    <string name="pink_play_list_favorite">Favorite</string>
    <string name="pink_play_list_footer_add">Add play list</string>
    <string name="pink_play_list_footer_end_summary_formatter">%d play lists in total</string>

    <string name="pink_play_list_create">Create play list</string>
    <string name="pink_play_list_created">%s created</string>
    <string name="pink_play_list_edit">Edit play list</string>
    <string name="pink_play_list_dialog_hint">Play list name</string>
    <string name="pink_play_list_dialog_add_to">Add to play list</string>

    <plurals name="pink_play_list_items_formatter">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <!-- Play Lists - Details -->
    <string name="pink_play_list_details_epinkty">No music here, go add some!</string>
    <string name="pink_play_list_details_footer_end_summary_formatter">%d songs in total</string>

    <!-- Main -->
    <string-array name="pink_main_titles">
        <item>@string/pink_fragment_title_home</item>
        <item>@string/pink_fragment_title_music</item>
        <item>@string/pink_fragment_title_video</item>
        <item>@string/pink_fragment_title_news</item>
    </string-array>

    <!-- Music -->

    <string name="pink_music_default_duration">00:00</string>

    <!-- Local Files -->
    <string name="pink_local_files_segmented_all">All</string>
    <string name="pink_local_files_segmented_folder">Folder</string>

    <string name="pink_local_files_music_list_epinkty">No music found on this device</string>
    <string name="pink_local_files_music_list_end_summary_formatter">%d songs in total</string>
    <string name="pink_local_files_folder_list_end_summary_formatter">%d folders in total</string>
    <string name="pink_local_files_folder_list_item_info_formatter" formatted="false">%d songs | %s</string>
    <string name="pink_local_files_folder_list_add_folder">Add Folder</string>

    <string name="pink_local_files_file_system_epinkty">No files under this directory</string>
    <string name="pink_local_files_file_system_menu_done">Done</string>

    <!-- Local Files - File System -->
    <plurals name="pink_folders_created_formatter">
        <item quantity="one">%d new folder created</item>
        <item quantity="other">%d new folders created</item>
    </plurals>
    <plurals name="pink_directory_items_formatter">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <plurals name="pink_selected_folders_formatter">
        <item quantity="one">%d folder selected</item>
        <item quantity="other">%d folders selected</item>
    </plurals>

    <!-- Menu -->
    <string name="pink_menu_add_to_play_list">Add to play list</string>
    <string name="pink_menu_create_play_list">Create play list</string>
    <string name="pink_menu_refresh">Refresh</string>
    <string name="pink_menu_play_now">Play now</string>
    <string name="pink_menu_rename">Rename</string>
    <string name="pink_menu_delete">Delete</string>
    <string name="pink_sign_in">登录</string>
    <string name="pink_sign_up">注册</string>
    <string name="pink_login_welcome">欢迎登录</string>
    <string name="pink_sign_username_null">用户名为空</string>
    <string name="pink_sign_password_null">密码不能为空</string>
    <string name="pink_sign_up_ing">注册中...</string>
    <string name="pink_sign_in_ing">登录中...</string>
    <string name="pink_sign_hint_username">用户名</string>
    <string name="pink_sign_hint_password">密码</string>
    <string name="pink_nav_click_login">点击头像登录</string>
    <string name="pink_menu_nva_home">首页</string>
    <string name="pink_error_indescribable">不可描述性错误</string>
    <string name="pink_sign_in_success">登录成功</string>

    <!--TodoList-->
    <string name="pink_todo_count">%1$d个待办事项</string>
    <string name="pink_todo_all_day">全&#160; 天</string>
    <string name="pink_weather_auto_location_fail">获取位置信息失败</string>
    <string name="pink_setting">设置</string>
    <string name="pink_todo_count_emptyview">今天的待办都完成了吗？点开确认一下吧！</string>
    <string name="pink_local_play_list">本地音乐</string>
    <string name="pink_play_all">播放全部</string>
    <string name="login">登录</string>
    <string name="check">签到</string>

    <!--FuzzyDateFormatter-->
    <plurals name="fuzzydatetime__seconds_ago">
        <item quantity="one">%d 秒前</item>
        <item quantity="other">%d 秒前</item>
    </plurals>
    <plurals name="fuzzydatetime__minutes_ago">
        <item quantity="one">%d 分钟前</item>
        <item quantity="other">%d 分钟前</item>
    </plurals>
    <plurals name="fuzzydatetime__hours_ago">
        <item quantity="one">%d 小时前</item>
        <item quantity="other">%d 小时前</item>
    </plurals>
    <plurals name="fuzzydatetime__days_ago">
        <item quantity="one">%d 天前</item>
        <item quantity="other">%d 天前</item>
    </plurals>
    <plurals name="fuzzydatetime__weeks_ago">
        <item quantity="one">%d 周前</item>
        <item quantity="other">%d 周前</item>
    </plurals>
    <plurals name="fuzzydatetime__months_ago">
        <item quantity="one">%d 月前</item>
        <item quantity="other">%d 月前</item>
    </plurals>
    <plurals name="fuzzydatetime__years_ago">
        <item quantity="one">%d 年前</item>
        <item quantity="other">%d 年前</item>
    </plurals>

    <string name="share">分享</string>

    <!--Weather-->
    <string name="weather_publish_time">%s 发布</string>
    <string name="loading">努力加载中...</string>
    <string name="ac_welcome_login">登录</string>
    <string name="ac_username_hint">用户名</string>
    <string name="ac_password_hint">密码</string>
    <string name="ac_login">登录</string>
    <string name="ac_forget_password">忘记密码？</string>
    <string name="ac_username_not_null">用户名不能为空</string>
    <string name="ac_password_not_null">密码不能为空</string>
    <string name="pink_error_network">网络连接失败</string>
    <string name="pink_waiting">请稍等...</string>
    <string name="ac_banana_gold">金香蕉：</string>
    <string name="ac_banana">香蕉：</string>
    <string name="ac_vip_standrad">正式会员</string>
    <string name="ac_vip_unstandrad">准会员</string>
    <string name="ac_sign_fail">签到失败</string>
    <string name="ac_sign">签到</string>
    <string name="ac_signed">已签到</string>
    <string name="pink_download">下载</string>
    <string name="pink_more">更多</string>
    <string name="ac_video_null">视频不存在</string>
    <string name="follow">关注</string>
    <string name="unfollow">未关注</string>
    <string name="ac_count_view">观看次数</string>
    <string name="ac_count_danmu">弹幕数量</string>
    <string name="feed">投食</string>
    <string name="mark">收藏</string>
    <string name="cache">缓存</string>
    <string name="brief">简介</string>
    <string name="comment">评论</string>
    <string name="refTags">标签相关</string>
    <string name="refRecommond">相关推荐</string>
    <string name="emoji">表情</string>
    <string name="image">图片</string>
    <string name="duplicate_quote_expand">重复引用已显示&#160;&#160;[收起]</string>
    <string name="duplicate_quote_un_expand">重复引用已隐藏&#160;&#160;[展开]</string>
    <string name="no_duplicate_quote_expand">层引用已展开&#160;&#160;[隐藏]</string>
    <string name="no_duplicate_quote_un_expand">层引用已隐藏&#160;&#160;[展开]</string>
    <string name="part">分集</string>
</resources>
