<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#2fa881" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/ac_welcome_login"
            android:textColor="#FFCC00"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#c5c5c5">

            <EditText
                android:hint="@string/ac_username_hint"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:inputType="textPersonName"
                android:paddingBottom="2dp"
                android:textColor="#2fa881"
                android:textCursorDrawable="@drawable/input_cursor"
                android:textSize="13sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#c5c5c5">

            <EditText
                android:hint="@string/ac_password_hint"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:inputType="textPassword"
                android:paddingBottom="2dp"
                android:textColor="#2fa881"
                android:textCursorDrawable="@drawable/input_cursor"
                android:textSize="13sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_go"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/ac_login"
            android:textColor="#d3d3d3" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/ac_forget_password"
        android:textColor="#9a9a9a"
        android:textSize="10sp" />
</LinearLayout>
